# pseudotest

./: .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: developer-guide.md  index.md  user-guide.md
pseudotest/: __init__.py  cli.py  cli_run.py  cli_update.py  comparator.py  config_updater.py  exceptions.py  executor.py  formatting.py  matchers.py  matches.py  report.py  runner.py  test_config.py  utils.py  value_extractors.py
scripts/: pseudotest  pseudotest-update
tests/: conftest.py  test_cli_run.py  test_comparator.py  test_config_updater.py  test_executor.py  test_formatting.py  test_integration.py  test_matchers.py  test_report.py  test_test_config.py  test_value_extractors.py
